[gd_scene load_steps=11 format=2]

[ext_resource path="res://menus/BaseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://menus/menu_bg_fade.shader" type="Shader" id=2]
[ext_resource path="res://mods/ap7-dungeon/menus/reward/RewardButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://mods/ap7-dungeon/menus/reward/RewardMenu.gd" type="Script" id=4]
[ext_resource path="res://ui/fonts/regular/regular_70.tres" type="DynamicFont" id=5]
[ext_resource path="res://sfx/ui/recorded.wav" type="AudioStream" id=6]
[ext_resource path="res://nodes/menus/AutoFocusConnector.gd" type="Script" id=7]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/progress = 1.0
shader_param/max_alpha = 1.0
shader_param/base_color = Color( 0.1686, 0.1098, 0.2235, 1 )
shader_param/hi_color = Color( 0.6706, 0.4588, 0.9098, 0.0625 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 64.0
content_margin_right = 64.0
bg_color = Color( 0.670588, 0.458824, 0.909804, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_detail = 1
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 1
shadow_offset = Vector2( -16, 16 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 64.0
content_margin_right = 64.0
bg_color = Color( 0.670588, 0.458824, 0.909804, 1 )
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 1
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 1
shadow_offset = Vector2( -16, 16 )

[node name="BaseMenu" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Blur" parent="." index="0"]
visible = false
material = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="Scroller/OverscanMarginContainer" index="0"]
margin_left = 172.0
margin_top = 97.0
margin_right = 1748.0
margin_bottom = 983.0

[node name="VBoxContainer" type="VBoxContainer" parent="Scroller/OverscanMarginContainer/CenterContainer" index="0"]
margin_left = 468.0
margin_top = 74.0
margin_right = 1108.0
margin_bottom = 812.0
grow_horizontal = 2
rect_min_size = Vector2( 640, 0 )
size_flags_vertical = 3
custom_constants/separation = 24
alignment = 1

[node name="Bar" type="PanelContainer" parent="Scroller/OverscanMarginContainer/CenterContainer/VBoxContainer" index="0"]
margin_right = 640.0
margin_bottom = 90.0
custom_styles/panel = SubResource( 3 )

[node name="RewardMenuTitleLabel" type="Label" parent="Scroller/OverscanMarginContainer/CenterContainer/VBoxContainer/Bar" index="0"]
margin_left = 64.0
margin_right = 576.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 5 )
text = "Select a reward..."
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Scroller/OverscanMarginContainer/CenterContainer/VBoxContainer" index="1"]
margin_top = 114.0
margin_right = 640.0
margin_bottom = 634.0
custom_constants/separation = 32

[node name="ButtonContainer" type="VBoxContainer" parent="Scroller/OverscanMarginContainer/CenterContainer/VBoxContainer/HBoxContainer" index="0"]
margin_right = 640.0
margin_bottom = 520.0
size_flags_horizontal = 3
custom_constants/separation = 20
script = ExtResource( 7 )
preserve_focus_index = true
focus_on_hover = true

[node name="RewardButton" parent="Scroller/OverscanMarginContainer/CenterContainer/VBoxContainer/HBoxContainer/ButtonContainer" index="0" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_right = 640.0
margin_bottom = 160.0

[node name="RewardButton2" parent="Scroller/OverscanMarginContainer/CenterContainer/VBoxContainer/HBoxContainer/ButtonContainer" index="1" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 180.0
margin_right = 640.0
margin_bottom = 340.0

[node name="RewardButton3" parent="Scroller/OverscanMarginContainer/CenterContainer/VBoxContainer/HBoxContainer/ButtonContainer" index="2" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 520.0

[node name="Bar2" type="PanelContainer" parent="Scroller/OverscanMarginContainer/CenterContainer/VBoxContainer" index="2"]
margin_top = 658.0
margin_right = 640.0
margin_bottom = 738.0
rect_min_size = Vector2( 0, 80 )
custom_styles/panel = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 6 )
bus = "UI"
